--- a/config/yugabyte/regression_pipelines/write_workloads/postgres/updateG6_update_included_colm.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/postgres/updateG6_update_included_colm.yaml
@@ -21,6 +21,9 @@ microbenchmark:
             - DROP TABLE IF EXISTS UG6_cardinality_tbl1_1 CASCADE;
             - DROP TABLE IF EXISTS UG6_cardinality_tbl1_child_1 CASCADE;
             - CREATE TABLE UG6_cardinality_tbl1_1(col_bigint_card1_1 bigint, col_bigint_card2_1 bigint, col_bigint_card3_1 bigint, col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_id_5 bigint, col_bigint_id_6 bigint, col_int_id_1 int, col_int_id_2 int, col_int_id_3 int, col_int_id_4 int, col_int_card1_1 int, col_int_card1_2 int,  col_int_card1_3 int, col_int_card1_4 int, col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1));
+            - CREATE UNIQUE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_2);
+            - CREATE UNIQUE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_3);
+            - CREATE UNIQUE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_4);
             - CREATE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_1, col_bigint_card2_1) INCLUDE (col_int_id_2, col_int_id_3, col_int_id_4)
             - CREATE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_1, col_bigint_card3_1) INCLUDE (col_int_id_2, col_int_id_3, col_int_id_4)
             - CREATE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_5 DESC) INCLUDE (col_int_card1_4) # update single column + 1M row
