--- a/config/yugabyte/regression_pipelines/write_workloads/yugabyte/updateG6_update_included_colm.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yugabyte/updateG6_update_included_colm.yaml
@@ -25,7 +25,7 @@ microbenchmark:
             - CREATE UNIQUE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_2);
             - CREATE UNIQUE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_3);
             - CREATE UNIQUE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_4);
-            - CREATE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_1, col_bigint_card2_1) INCLUDE (col_int_id_2, col_int_id_3, col_int_id_4)
+            - CREATE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_1, col_bigint_card1_1) INCLUDE (col_int_id_2, col_int_id_3, col_int_id_4)
             - CREATE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_1, col_bigint_card3_1) INCLUDE (col_int_id_2, col_int_id_3, col_int_id_4)
             - CREATE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_5 DESC) INCLUDE (col_int_card1_4) # update single column + 1M row
             - CREATE INDEX ON UG6_cardinality_tbl1_1(col_bigint_id_6 DESC) INCLUDE (col_int_card1_1, col_int_card1_2, col_int_card1_3) #update multiple columns + 1M row with range
@@ -105,12 +105,12 @@ microbenchmark:
                   - name: update_10_cols
                     weight: 100
                     queries:
-                        - query: UPDATE UG6_cardinality_tbl1_1 SET col_int_id_2=col_int_id_2+1, col_int_id_3=col_int_id_3+1, col_int_id_4=col_int_id_4+1 where col_bigint_id_1 = ? and col_bigint_card2_1=?
+                        - query: UPDATE UG6_cardinality_tbl1_1 SET col_int_id_2=col_int_id_2+1, col_int_id_3=col_int_id_3+1, col_int_id_4=col_int_id_4+1 where col_bigint_id_1 = ? and col_bigint_card1_1=?
                           bindings:
                             - util: PrimaryIntGen
                               params: [ 1, 1000000 ]
-                            - util: RandomInt
-                              params: [ 1000000,1001000 ]
+                            - util: OneNumberFromArray
+                              params: [ 1000000 ]
 
             # update single column + 1M row
             - workload: UG6_2_update_1M_rows_1included_colm_range_filter_desc
@@ -134,7 +134,7 @@ microbenchmark:
                   - name: update_10_cols
                     weight: 100
                     queries:
-                        - query: UPDATE UG6_cardinality_tbl1_1 SET col_bigint_id_2=col_bigint_id_2+1, col_bigint_id_3=col_bigint_id_3+1, col_bigint_id_4=col_bigint_id_4+1 where col_int_id_1 = ?
+                        - query: UPDATE UG6_cardinality_tbl1_1 SET col_bigint_id_2=col_bigint_id_2+1000000, col_bigint_id_3=col_bigint_id_3+1000000, col_bigint_id_4=col_bigint_id_4+1000000 where col_int_id_1 = ?
                           bindings:
                             - util: PrimaryIntGen
                               params: [ 1, 1000000 ]
@@ -145,4 +145,4 @@ microbenchmark:
                   - name: update_10_cols
                     weight: 100
                     queries:
-                        - query: UPDATE UG6_cardinality_tbl1_1 SET col_bigint_id_2=col_bigint_id_2+1, col_bigint_id_3=col_bigint_id_3+1, col_bigint_id_4=col_bigint_id_4+1 where col_int_id_1 > 50000
+                        - query: UPDATE UG6_cardinality_tbl1_1 SET col_bigint_id_2=col_bigint_id_2+1000000, col_bigint_id_3=col_bigint_id_3+1000000, col_bigint_id_4=col_bigint_id_4+1000000 where col_int_id_1 > 0
