--- a/config/yugabyte/regression_pipelines/write_workloads/postgres/updateG5_update_included_colm.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/postgres/updateG5_update_included_colm.yaml
@@ -36,13 +36,16 @@ microbenchmark:
             - CREATE UNIQUE INDEX ON UG5_cardinality_tbl2_1(col_bigint_id_2);
             - CREATE UNIQUE INDEX ON UG5_cardinality_tbl2_1(col_bigint_id_3);
             - CREATE UNIQUE INDEX ON UG5_cardinality_tbl2_1(col_bigint_id_4);
-            - CREATE INDEX ON UG5_cardinality_tbl2_1(col_int_id_1) INCLUDE (col_bigint_id_2,col_bigint_id_3,col_bigint_id_4) #Index created so that an update on these included columns will should cascade to child table and it's indexes
+            - CREATE INDEX ON UG5_cardinality_tbl2_1(col_int_id_1 ASC) INCLUDE (col_bigint_id_2,col_bigint_id_3,col_bigint_id_4) #Index created so that an update on these included columns will should cascade to child table and it's indexes
             - CREATE TABLE UG5_cardinality_tbl2_child_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_id_5 bigint, col_varchar10_id_1 varchar(10), col_bigint_card1_1 bigint, col_bigint_card2_1 bigint, col_bigint_card3_1 bigint, PRIMARY KEY(col_bigint_id_1));
             - ALTER TABLE UG5_cardinality_tbl2_child_1 ADD CONSTRAINT UG5_cardinality_tbl2_child_id1_fk FOREIGN KEY (col_bigint_id_2) REFERENCES UG5_cardinality_tbl2_1 (col_bigint_id_1) ON UPDATE CASCADE;
             - ALTER TABLE UG5_cardinality_tbl2_child_1 ADD CONSTRAINT UG5_cardinality_tbl2_child_id2_fk FOREIGN KEY (col_bigint_id_3) REFERENCES UG5_cardinality_tbl2_1 (col_bigint_id_2) ON UPDATE CASCADE;
             - ALTER TABLE UG5_cardinality_tbl2_child_1 ADD CONSTRAINT UG5_cardinality_tbl2_child_id3_fk FOREIGN KEY (col_bigint_id_4) REFERENCES UG5_cardinality_tbl2_1 (col_bigint_id_3) ON UPDATE CASCADE;
             - ALTER TABLE UG5_cardinality_tbl2_child_1 ADD CONSTRAINT UG5_cardinality_tbl2_child_id4_fk FOREIGN KEY (col_bigint_id_5) REFERENCES UG5_cardinality_tbl2_1 (col_bigint_id_4) ON UPDATE CASCADE;
             - CREATE INDEX ON UG5_cardinality_tbl2_child_1(col_bigint_id_2) INCLUDE (col_bigint_id_3,col_bigint_id_4,col_bigint_id_5) ; #Update on referenced+included colmn
+            - CREATE INDEX UG5_cardinality_tbl2_child_1(col_bigint_id_3 ASC);
+            - CREATE INDEX UG5_cardinality_tbl2_child_1(col_bigint_id_4 ASC);
+            - CREATE INDEX UG5_cardinality_tbl2_child_1(col_bigint_id_5 ASC);
 
         loadRules:
 
@@ -158,19 +161,8 @@ microbenchmark:
                     queries:
                         - query: UPDATE UG5_cardinality_tbl1_1 SET col_int_card1_4=col_int_card1_4+1 where col_bigint_id_5 > 0
 
-            #update all(1M) rows with point select
-            - workload: UG5_3_update_1M_rows_included_colm
-              run:
-                  - name: update_10_cols
-                    weight: 100
-                    queries:
-                        - query: UPDATE UG5_cardinality_tbl1_1 SET col_bigint_id_2=col_bigint_id_2+1 where col_bigint_card1_1 = ?
-                          bindings:
-                            - util: OneNumberFromArray
-                              params: [ 1000000 ]
-
             # update single column + 1M row
-            - workload: UG5_4_update_1M_rows_1col_included_colm_range_filter_range_tbl
+            - workload: UG5_3_update_1M_rows_1col_included_colm_range_filter_range_tbl
               run:
                   - name: update_10_cols
                     weight: 100
@@ -178,7 +170,7 @@ microbenchmark:
                         - query: UPDATE UG5_cardinality_tbl1_2 SET col_int_card1_4=col_int_card1_4+1 where col_bigint_id_5 > 0
 
             # Update on parent tbl 3cols which are included in an index (col_bigint_id_2,col_bigint_id_3,col_bigint_id_4) referenced in child tbl (col_bigint_id_3,col_bigint_id_4,col_bigint_id_5) and also part of an included colms of an index
-            - workload: UG5_5_update_parent_tbls_referenced_included_colm_1row
+            - workload: UG5_4_update_parent_tbls_referenced_included_colm_1row
               run:
                   - name: update_10_cols
                     weight: 100
@@ -186,10 +178,10 @@ microbenchmark:
                         - query: UPDATE UG5_cardinality_tbl2_1 SET col_bigint_id_2=col_bigint_id_2+1000000, col_bigint_id_3=col_bigint_id_3+1000000, col_bigint_id_4=col_bigint_id_4+1000000 where col_int_id_1 = ?
                           bindings:
                             - util: PrimaryIntGen
-                              params: [ 1, 1000000 ]
+                              params: [ 1, 800000 ]
 
             # Update on parent tbl 3cols which are included in an index (col_bigint_id_2,col_bigint_id_3,col_bigint_id_4) referenced in child tbl (col_bigint_id_3,col_bigint_id_4,col_bigint_id_5) and also part of an included colms of an index
-            - workload: UG5_6_update_parent_tbls_referenced_included_colm_1k_rows
+            - workload: UG5_5_update_parent_tbls_referenced_included_colm_1k_rows
               run:
                   - name: update_10_cols
                     weight: 100
