--- a/config/yugabyte/regression_pipelines/write_workloads/yb_colocated/updateG5_update_included_colm.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yb_colocated/updateG5_update_included_colm.yaml
@@ -46,9 +46,9 @@ microbenchmark:
             - ALTER TABLE UG5_cardinality_tbl2_child_1 ADD CONSTRAINT UG5_cardinality_tbl2_child_id3_fk FOREIGN KEY (col_bigint_id_4) REFERENCES UG5_cardinality_tbl2_1 (col_bigint_id_3) ON UPDATE CASCADE;
             - ALTER TABLE UG5_cardinality_tbl2_child_1 ADD CONSTRAINT UG5_cardinality_tbl2_child_id4_fk FOREIGN KEY (col_bigint_id_5) REFERENCES UG5_cardinality_tbl2_1 (col_bigint_id_4) ON UPDATE CASCADE;
             - CREATE INDEX ON UG5_cardinality_tbl2_child_1(col_bigint_id_2) INCLUDE (col_bigint_id_3,col_bigint_id_4,col_bigint_id_5); #Update on referenced+included colmn
-            - CREATE INDEX UG5_cardinality_tbl2_child_1(col_bigint_id_3 ASC);
-            - CREATE INDEX UG5_cardinality_tbl2_child_1(col_bigint_id_4 ASC);
-            - CREATE INDEX UG5_cardinality_tbl2_child_1(col_bigint_id_5 ASC);
+            - CREATE INDEX ON UG5_cardinality_tbl2_child_1(col_bigint_id_3 ASC);
+            - CREATE INDEX ON UG5_cardinality_tbl2_child_1(col_bigint_id_4 ASC);
+            - CREATE INDEX ON UG5_cardinality_tbl2_child_1(col_bigint_id_5 ASC);
 
         cleanup:
             - DROP TABLE IF EXISTS UG5_cardinality_tbl2_child_1 CASCADE;
