--- a/config/yugabyte/regression_pipelines/write_workloads/yb_colocated/updateG5_update_included_colm.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yb_colocated/updateG5_update_included_colm.yaml
@@ -45,7 +45,7 @@ microbenchmark:
             - ALTER TABLE UG5_cardinality_tbl2_child_1 ADD CONSTRAINT UG5_cardinality_tbl2_child_id2_fk FOREIGN KEY (col_bigint_id_3) REFERENCES UG5_cardinality_tbl2_1 (col_bigint_id_2) ON UPDATE CASCADE;
             - ALTER TABLE UG5_cardinality_tbl2_child_1 ADD CONSTRAINT UG5_cardinality_tbl2_child_id3_fk FOREIGN KEY (col_bigint_id_4) REFERENCES UG5_cardinality_tbl2_1 (col_bigint_id_3) ON UPDATE CASCADE;
             - ALTER TABLE UG5_cardinality_tbl2_child_1 ADD CONSTRAINT UG5_cardinality_tbl2_child_id4_fk FOREIGN KEY (col_bigint_id_5) REFERENCES UG5_cardinality_tbl2_1 (col_bigint_id_4) ON UPDATE CASCADE;
-            - CREATE INDEX ON UG5_cardinality_tbl2_child_1(col_bigint_id_2) INCLUDE (col_bigint_id_3,col_bigint_id_4,col_bigint_id_5); #Update on referenced+included colmn
+            - CREATE INDEX ON UG5_cardinality_tbl2_child_1(col_bigint_id_2 ASC) INCLUDE (col_bigint_id_3,col_bigint_id_4,col_bigint_id_5); #Update on referenced+included colmn
             - CREATE INDEX ON UG5_cardinality_tbl2_child_1(col_bigint_id_3 ASC);
             - CREATE INDEX ON UG5_cardinality_tbl2_child_1(col_bigint_id_4 ASC);
             - CREATE INDEX ON UG5_cardinality_tbl2_child_1(col_bigint_id_5 ASC);
@@ -196,3 +196,10 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: UPDATE UG5_cardinality_tbl2_1 SET col_bigint_id_2=col_bigint_id_2+1000000, col_bigint_id_3=col_bigint_id_3+1000000, col_bigint_id_4=col_bigint_id_4+1000000 where col_int_id_1 > 999000
+
+            - workload: UG5_6_update_child_tbls_referenced_included_colm_1k_rows
+              run:
+                  - name: update_10_cols
+                    weight: 100
+                    queries:
+                        - query: UPDATE ug5_cardinality_tbl2_child_1 SET col_bigint_id_3=1000000 where col_bigint_id_2<1001
