INSERT ON CONFLICT optimisations

--- a/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW6_on_conflict_do_update_range.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW6_on_conflict_do_update_range.yaml
@@ -26,7 +26,7 @@ microbenchmark:
             - CREATE UNIQUE INDEX user_accounts_1 ON CW6_accounts_1(account_id_1 ASC, user_id_1 ASC);
 
             - DROP TABLE IF EXISTS CW6_accounts_2;
-            - CREATE TABLE IF NOT EXISTS CW6_accounts_2 PARTITION BY RANGE (account_id_1 ASC);
+            - CREATE TABLE IF NOT EXISTS CW6_accounts_2(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1 ASC)) PARTITION BY RANGE (account_id_1 ASC);
             - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_2 PARTITION OF CW6_accounts_2 FOR VALUES FROM (1) TO (2000000);
             - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_2 PARTITION OF CW6_accounts_2 FOR VALUES FROM (2000001) TO (4000000);
             - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_2 PARTITION OF CW6_accounts_2 FOR VALUES FROM (4000001) TO (6000000);
@@ -36,7 +36,7 @@ microbenchmark:
             - DROP TABLE IF EXISTS CW6_accounts_2;
 
         loadRules:
-            -   table: CW6_accounts_1
+            -   table: CW6_accounts_
                 count: 2
                 rows: 8000000
                 columns:
