--- a/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW5_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW5_on_conflict_do_update.yaml
@@ -24,17 +24,12 @@ microbenchmark:
             - CREATE TABLE IF NOT EXISTS CW5_accounts_1(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1));
             - CREATE UNIQUE INDEX user_accounts_1 ON CW5_accounts_1(account_id_1, user_id_1);
 
-            - DROP TABLE IF EXISTS CW5_accounts_2;
-#            - CREATE TABLE IF NOT EXISTS CW5_accounts_2 PARTITION BY HASH (account_id_1);
-#            - CREATE TABLE IF NOT EXISTS CW5_0_2M_accounts_2 PARTITION OF CW5_accounts_2 FOR VALUES WITH (MODULUS 4, REMAINDER 0);
-#            - CREATE TABLE IF NOT EXISTS CW5_0_2M_accounts_2 PARTITION OF CW5_accounts_2 FOR VALUES WITH (MODULUS 4, REMAINDER 1);
-#            - CREATE TABLE IF NOT EXISTS CW5_0_2M_accounts_2 PARTITION OF CW5_accounts_2 FOR VALUES WITH (MODULUS 4, REMAINDER 2);
-#            - CREATE TABLE IF NOT EXISTS CW5_0_2M_accounts_2 PARTITION OF CW5_accounts_2 FOR VALUES WITH (MODULUS 4, REMAINDER 3);
-            - CREATE TABLE IF NOT EXISTS CW5_accounts_2 PARTITION BY RANGE (account_id_1);
-            - CREATE TABLE IF NOT EXISTS CW5_0_2M_accounts_2 PARTITION OF CW5_accounts_2 FOR VALUES FROM (1) TO (2000000);
-            - CREATE TABLE IF NOT EXISTS CW5_0_2M_accounts_2 PARTITION OF CW5_accounts_2 FOR VALUES FROM (2000001) TO (4000000);
-            - CREATE TABLE IF NOT EXISTS CW5_0_2M_accounts_2 PARTITION OF CW5_accounts_2 FOR VALUES FROM (4000001) TO (6000000);
-            - CREATE TABLE IF NOT EXISTS CW5_0_2M_accounts_2 PARTITION OF CW5_accounts_2 FOR VALUES FROM (6000001) TO (8000000);
+            - DROP TABLE IF EXISTS CW4_accounts_2;
+            - CREATE TABLE IF NOT EXISTS CW4_accounts_2(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1)) PARTITION BY HASH (account_id_1);
+            - CREATE TABLE IF NOT EXISTS CW4_0_2M_accounts_2 PARTITION OF CW4_accounts_2 FOR VALUES WITH (MODULUS 4, REMAINDER 0);
+            - CREATE TABLE IF NOT EXISTS CW4_0_2M_accounts_2 PARTITION OF CW4_accounts_2 FOR VALUES WITH (MODULUS 4, REMAINDER 1);
+            - CREATE TABLE IF NOT EXISTS CW4_0_2M_accounts_2 PARTITION OF CW4_accounts_2 FOR VALUES WITH (MODULUS 4, REMAINDER 2);
+            - CREATE TABLE IF NOT EXISTS CW4_0_2M_accounts_2 PARTITION OF CW4_accounts_2 FOR VALUES WITH (MODULUS 4, REMAINDER 3);
 
         cleanup:
             - DROP TABLE IF EXISTS CW5_accounts_1;
