--- a/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW4_on_conflict_do_nothing.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW4_on_conflict_do_nothing.yaml
@@ -21,7 +21,7 @@ microbenchmark:
         create:
             - DROP TABLE IF EXISTS CW4_accounts_1;
             - CREATE TABLE IF NOT EXISTS CW4_accounts_1(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1));
-            - CREATE UNIQUE INDEX user_accounts_1 ON CW4_accounts_1(account_id_1, user_id_1);
+            - CREATE UNIQUE INDEX CW4_user_accounts_1 ON CW4_accounts_1(account_id_1, user_id_1);
 
             - DROP TABLE IF EXISTS CW4_accounts_2;
             - CREATE TABLE IF NOT EXISTS CW4_accounts_2(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1)) PARTITION BY HASH (account_id_1);
